--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -7,29 +7,33 @@
 
 <%= link_to("<< Back to List", {:action => 'index'} , :class => 'back-link') %>
 
-<div class="subjects show">
-  <h2>Show Subject</h2>
+<div class="pages show">
+  <h2>Show page</h2>
 
-  <table summary="Subject detail view">
+  <table summary="Page detail view">
     <tr>
       <th>Name</th>
-      <th><%= @subject.name %></th>
+      <th><%= @page.name %></th>
+    </tr>
+    <tr>
+      <th>Permalink</th>
+      <th><%= @page.permalink %></th>
     </tr>
     <tr>
       <th>Position</th>
-      <th><%= @subject.position %></th>
+      <th><%= @page.position %></th>
     </tr>
     <tr>
       <th>Visible?</th>
-      <th><%= @subject.visible ? 'true' : 'false' %></th>
+      <th><%= @page.visible ? 'true' : 'false' %></th>
     </tr>
     <tr>
       <th>Created</th>
-      <th><%= @subject.created_at %></th>
+      <th><%= @page.created_at %></th>
     </tr>
     <tr>
       <th>Updated</th>
-      <th><%= @subject.updated_at %></th>
+      <th><%= @page.updated_at %></th>
     </tr>
   </table>
 </div>
