First draft. Add Subject, Page, Section models. Add CRUD files for Subject, Page and Section.

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,15 +1,12 @@
-<% if ! flash[:notice].blank? %>
-  <div class="notice">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
+<% @page_title = "Subjects" %>
 
 <div class="subjects index">
   <h2>Subjects</h2>
 
-  <%= link_to("Add New Subject", {:action => 'new'} , :class => 'action new') %>
+  <div><%= pluralize(@subjects.size, 'subject') %> found.  <%= link_to("Add New Subject", {:action => 'new'} , :class => 'btn btn-success btn-sm') %></div>
+  <hr>
 
-  <table class="listing" summary="Subject list">
+  <table class="table table-striped table-bordered datatables" summary="Subject list">
     <tr>
       <th></th>
       <th>Subject</th>
@@ -18,15 +15,15 @@
       <th>Actions</th>
     </tr>
     <% @subjects.each do |subject|  %>
-    <tr>
+    <tr class="<%= cycle('odd', 'even') %>">
       <td><%= subject.position %></td>
       <td><%= subject.name %></td>
-      <td class="center"><%= subject.visible ? 'Yes' : 'No' %></td>
+      <td class="center"><%= status_tag(subject.visible) %></td>
       <td class="center"><%= subject.pages.size %></td>
       <td>
-        <%= link_to("Show", {:action => 'show', :id => subject.id}, :class => 'action show') %>
-        <%= link_to("Edit", {:action => 'edit', :id => subject.id}, :class => 'action edit') %>
-        <%= link_to("Delete", {:action => 'delete', :id => subject.id}, :class => 'action delete') %>
+        <%= link_to("Show", {:action => 'show', :id => subject.id}, :class => 'btn btn-info btn-sm') %>
+        <%= link_to("Edit", {:action => 'edit', :id => subject.id}, :class => 'btn btn-default btn-sm') %>
+        <%= link_to("Delete", {:action => 'delete', :id => subject.id}, :class => 'btn btn-danger btn-sm') %>
       </td>
     </tr>
     <% end %>
