--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,15 +1,9 @@
-<% if ! flash[:notice].blank? %>
-  <div class="notice">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
-
 <div class="pages index">
   <h2>Pages</h2>
 
-  <%= link_to("Add New Page", {:action => 'new'} , :class => 'action new') %>
+  <%= link_to("Add New Page", {:action => 'new'} , :class => 'btn btn-success btn-sm') %>
 
-  <table class="listing" summary="Page list">
+  <table class="table table-striped table-bordered datatables" summary="Page list">
     <tr>
       <th>Position</th>
       <th>Subject ID</th>
@@ -25,12 +19,12 @@
       <td><%= page.subject.name %></td>
       <td><%= page.name %></td>
       <td><%= page.permalink %></td>
-      <td class="center"><%= page.visible ? 'Yes' : 'No' %></td>
+      <td class="center"><%= status_tag(page.visible) %></td>
       <td><%= page.sections.size %></td>
       <td>
-        <%= link_to("Show", {:action => 'show', :id => page.id}, :class => 'action show') %>
-        <%= link_to("Edit", {:action => 'edit', :id => page.id}, :class => 'action edit') %>
-        <%= link_to("Delete", {:action => 'delete', :id => page.id}, :class => 'action delete') %>
+        <%= link_to("Show", {:action => 'show', :id => page.id}, :class => 'btn btn-info btn-sm') %>
+        <%= link_to("Edit", {:action => 'edit', :id => page.id}, :class => 'btn btn-default btn-sm') %>
+        <%= link_to("Delete", {:action => 'delete', :id => page.id}, :class => 'btn btn-danger btn-sm') %>
       </td>
     </tr>
     <% end %>
