--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -4,28 +4,8 @@
   <h2>Create Page</h2>
 
   <%= form_for(:page, :url => {:action => 'create'}) do |f| %>
-    <table summary="Subejct form fields">
-      <tr>
-        <th>Subject</th>
-        <th><%= f.select :subject_id, @subjects.collect {|e| [ e.name, e.id ] }, { :include_blank => true } %></th>
-      </tr>
-      <tr>
-        <th>Name</th>
-        <th><%= f.text_field(:name) %></th>
-      </tr>
-      <tr>
-        <th>Permalink</th>
-        <th><%= f.text_field(:permalink) %></th>
-      </tr>
-      <tr>
-        <th>Position</th>
-        <th><%= f.text_field(:position) %></th>
-      </tr>
-      <tr>
-        <th>Visible</th>
-        <th><%= f.text_field(:visible) %></th>
-      </tr>
-    </table>
+
+    <%= render(:partial => "form", :locals => {:f => f}) %>
 
     <div class="form-buttons">
       <%= submit_tag("Create Page") %>
