--- a/app/views/subjects/delete.html.erb
+++ b/app/views/subjects/delete.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = "Delete subject" %>
+
 <%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link')  %>
 
 <div class="subject edit">
