--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,23 +1,13 @@
+<% @page_title = "Edit subject" %>
+
 <%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link')  %>
 
 <div class="subject edit">
   <h2>Update Subject</h2>
 
   <%= form_for(:subject, :url => {:action => 'update', :id => @subject.id}) do |f| %>
-    <table summary="Subejct form fields">
-      <tr>
-        <th>Name</th>
-        <th><%= f.text_field(:name) %></th>
-      </tr>
-      <tr>
-        <th>Position</th>
-        <th><%= f.text_field(:position) %></th>
-      </tr>
-      <tr>
-        <th>Visible</th>
-        <th><%= f.text_field(:visible) %></th>
-      </tr>
-    </table>
+
+    <%= render(:partial => "form", :locals => {:f => f}) %>
 
     <div class="form-buttons">
       <%= submit_tag("Update Subject") %>
