--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,7 +3,7 @@
 <div class="pages show">
   <h2>Show page</h2>
 
-  <table summary="Page detail view">
+  <table class="table table-striped table-bordered datatables" summary="Page detail view">
     <tr>
       <th>Name</th>
       <th><%= @page.name %></th>
