--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -47,7 +47,7 @@
 
     <hr>
     <footer>
-      <p>&copy; PLUS/ITDEV/CRM 2014</p>
+      <p>&copy; 2014</p>
     </footer>
   </div> <!-- /container -->
 </body>
