--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -5,13 +5,11 @@
 <div class="page edit">
   <h2>Update Page</h2>
 
-  <%= form_for(:page, :url => {:action => 'update', :id => @page.id}) do |f| %>
+  <%= form_for(:page, :url => {:action => 'update', :id => @page.id }, :html => {:class => 'form-horizontal'}) do |f| %>
 
     <%= render(:partial => "form", :locals => {:f => f}) %>
 
-    <div class="form-buttons">
-      <%= submit_tag("Update Subject") %>
-    </div>
+    <%= render(:partial => "partials/submit_button")  %>
 
   <% end %>
 </div>
