--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -3,13 +3,11 @@
 <div class="section edit">
   <h2>Update Section</h2>
 
-  <%= form_for(:section, :url => {:action => 'update', :id => @section.id}) do |f| %>
+  <%= form_for(:section, :url => {:action => 'update', :id => @section.id}, :html => {:class => 'form-horizontal'}) do |f| %>
 
     <%= render(:partial => "form", :locals => {:f => f})  %>
 
-    <div class="form-buttons">
-      <%= submit_tag("Update Subject") %>
-    </div>
+    <%= render(:partial => "partials/submit_button")  %>
 
   <% end %>
 </div>
