--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -1,14 +1,20 @@
-<table summary="Subejct form fields">
-  <tr>
-    <th>Name</th>
-    <th><%= f.text_field(:name) %></th>
-  </tr>
-  <tr>
-    <th>Position</th>
-    <th><%= f.text_field(:position) %></th>
-  </tr>
-  <tr>
-    <th>Visible</th>
-    <th><%= f.text_field(:visible) %></th>
-  </tr>
-</table>
+<div class="form-group">
+  <%= f.label(:name, :class => 'col-sm-3 control-label')  %>
+  <div class="col-sm-6">
+    <%= f.text_field(:name, {:class => 'form-control'}) %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label(:position, :class => 'col-sm-3 control-label')  %>
+  <div class="col-sm-6">
+    <%= f.text_field(:position, {:class => 'form-control'}) %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label(:visible, :class => 'col-sm-3 control-label')  %>
+  <div class="col-sm-6">
+    <%= f.check_box(:visible) %>
+  </div>
+</div>
