--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -5,13 +5,11 @@
 <div class="subject edit">
   <h2>Update Subject</h2>
 
-  <%= form_for(:subject, :url => {:action => 'update', :id => @subject.id}) do |f| %>
+  <%= form_for(:subject, :url => {:action => 'update', :id => @subject.id}, :html => {:class => 'form-horizontal'}) do |f| %>
 
     <%= render(:partial => "form", :locals => {:f => f}) %>
 
-    <div class="form-buttons">
-      <%= submit_tag("Update Subject") %>
-    </div>
+    <%= render(:partial => "partials/submit_button")  %>
 
   <% end %>
 </div>
