--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,11 +1,11 @@
 <% @page_title = "Show subject" %>
 
-<%= link_to("<< Back to List", {:action => 'index'} , :class => 'back-link') %>
+<%= link_to("<< Back to List", {:action => 'index'} , :class => 'btn btn-default') %>
 
 <div class="subjects show">
   <h2>Show Subject</h2>
 
-  <table summary="Subject detail view">
+  <table class="table table-striped table-bordered datatables" summary="Subject detail view">
     <tr>
       <th>Name</th>
       <th><%= @subject.name %></th>
