--- a/app/views/pages/delete.html.erb
+++ b/app/views/pages/delete.html.erb
@@ -1,11 +1,11 @@
 <% @page_title = "Delete page" %>
 
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'btn btn-default')  %>
+<%= link_to("<< Back to List", {:action => 'index', :subject_id => @subject.id}, :class => 'btn btn-default')  %>
 
 <div class="Page edit">
   <h2>Delete page</h2>
 
-  <%= form_tag({:action => 'destroy', :id => @page.id}, :html => {:class => 'form-horizontal'}) do %>
+  <%= form_tag({:action => 'destroy', :id => @page.id, :subject_id => @subject.id}, :html => {:class => 'form-horizontal'}) do %>
     <p>Are you sure you want to permanently delete this page?</p>
 
     <p class="reference-name"><%= @page.name %></p>
