--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,10 @@
+<% @page_title = "List pages" %>
+
 <div class="pages index">
   <h2>Pages</h2>
 
-  <%= link_to("Add New Page", {:action => 'new'} , :class => 'btn btn-success btn-sm') %>
+  <%= link_to("<< Back to subjects", {:controller => 'subjects'} , :class => 'btn btn-info btn-sm') %>
+  <%= link_to("+ Add New Page", {:action => 'new', :subject_id => @subject.id} , :class => 'btn btn-success btn-sm') %>
 
   <hr>
 
@@ -18,15 +21,16 @@
     <% @pages.each do |page|  %>
     <tr>
       <td><%= page.position %></td>
-      <td><%= page.subject.name %></td>
+      <td><%= page.subject.name if page.subject %></td>
       <td><%= page.name %></td>
       <td><%= page.permalink %></td>
       <td class="center"><%= status_tag(page.visible) %></td>
       <td><%= page.sections.size %></td>
       <td>
-        <%= link_to("Show", {:action => 'show', :id => page.id}, :class => 'btn btn-info btn-sm') %>
-        <%= link_to("Edit", {:action => 'edit', :id => page.id}, :class => 'btn btn-default btn-sm') %>
-        <%= link_to("Delete", {:action => 'delete', :id => page.id}, :class => 'btn btn-danger btn-sm') %>
+        <%= link_to("Sections", {:controller => 'sections', :page_id => page.id}, :class => 'btn btn-warning btn-sm') %>
+        <%= link_to("Show", {:action => 'show', :id => page.id, :subject_id => @subject.id}, :class => 'btn btn-info btn-sm') %>
+        <%= link_to("Edit", {:action => 'edit', :id => page.id, :subject_id => @subject.id}, :class => 'btn btn-default btn-sm') %>
+        <%= link_to("Delete", {:action => 'delete', :id => page.id, :subject_id => @subject.id}, :class => 'btn btn-danger btn-sm') %>
       </td>
     </tr>
     <% end %>
