--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,9 +1,11 @@
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link')  %>
+<% @page_title = "Add page" %>
+
+<%= link_to("<< Back to List", {:action => 'index', :subject_id => @subject.id}, :class => 'btn btn-default')  %>
 
 <div class="page new">
   <h2>Create Page</h2>
 
-  <%= form_for(:page, :url => {:action => 'create'}, :html => {:class => 'form-horizontal'}) do |f| %>
+  <%= form_for(:page, :url => {:action => 'create', :subject_id => @subject.id}, :html => {:class => 'form-horizontal'}) do |f| %>
 
     <%= render(:partial => "form", :locals => {:f => f}) %>
 
