--- a/app/views/sections/delete.html.erb
+++ b/app/views/sections/delete.html.erb
@@ -5,7 +5,7 @@
 <div class="section edit">
   <h2>Delete Dection</h2>
 
-  <%= form_tag({:action => 'destroy', :id => @section.id}, :html => {:class => 'form-horizontal'}) do %>
+  <%= form_tag({:action => 'destroy', :id => @section.id, :page_id => @page.id}, :html => {:class => 'form-horizontal'}) do %>
     <p>Are you sure you want to permanently delete this section?</p>
 
     <p class="reference-name"><%= @section.name %></p>
