--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,7 +1,8 @@
 <div class="sections index">
   <h2>Sections</h2>
 
-  <%= link_to("<span class='glyphicon glyphicon-plus'></span> Add New Section".html_safe, {:action => 'new'} , :class => 'btn btn-success btn-sm') %>
+  <%= link_to("<< Back to pages", {:controller => 'pages', :subject_id => @page.subject_id} , :class => 'btn btn-info btn-sm') %>
+  <%= link_to("<span class='glyphicon glyphicon-plus'></span> Add New Section".html_safe, {:action => 'new', :page_id => @page.id} , :class => 'btn btn-success btn-sm') %>
   <hr>
 
   <table class="table table-striped table-bordered datatables" summary="section list">
@@ -16,14 +17,14 @@
     <% @sections.each do |section|  %>
     <tr>
       <td><%= section.position %></td>
-      <td><%= section.page.name %></td>
+      <td><%= section.page.name if section.page %></td>
       <td><%= section.name %></td>
       <td><%= section.content_type %></td>
       <td class="center"><%= status_tag(section.visible) %></td>
       <td>
-        <%= link_to("Show", {:action => 'show', :id => section.id}, :class => 'btn btn-info btn-sm') %>
-        <%= link_to("Edit", {:action => 'edit', :id => section.id}, :class => 'btn btn-default btn-sm') %>
-        <%= link_to("Delete", {:action => 'delete', :id => section.id}, :class => 'btn btn-danger btn-sm') %>
+        <%= link_to("Show", {:action => 'show', :id => section.id, :page_id => @page.id}, :class => 'btn btn-info btn-sm') %>
+        <%= link_to("Edit", {:action => 'edit', :id => section.id, :page_id => @page.id}, :class => 'btn btn-default btn-sm') %>
+        <%= link_to("Delete", {:action => 'delete', :id => section.id, :page_id => @page.id}, :class => 'btn btn-danger btn-sm') %>
       </td>
     </tr>
     <% end %>
