--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,9 +1,9 @@
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link')  %>
+<%= link_to("<< Back to List", {:action => 'index', :page_id => @page.id}, :class => 'btn btn-default')  %>
 
 <div class="section new">
   <h2>Create Section</h2>
 
-  <%= form_for(:section, :url => {:action => 'create'}, :html => {:class => 'form-horizontal'} ) do |f| %>
+  <%= form_for(:section, :url => {:action => 'create', :page_id => @page.id}, :html => {:class => 'form-horizontal'} ) do |f| %>
 
     <%= render(:partial => "form", :locals => {:f => f})  %>
 
