--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("<< Back to List", {:action => 'index'} , :class => 'btn btn-default') %>
+<%= link_to("<< Back to List", {:action => 'index', :page_id => @page.id} , :class => 'btn btn-default') %>
 
 <div class="sections show">
   <h2>Show section</h2>
