--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -1,3 +1,5 @@
+<%= error_messages_for(@subject) %>
+
 <div class="form-group">
   <%= f.label(:name, :class => 'col-sm-3 control-label')  %>
   <div class="col-sm-6">
@@ -8,7 +10,7 @@
 <div class="form-group">
   <%= f.label(:position, :class => 'col-sm-3 control-label')  %>
   <div class="col-sm-6">
-    <%= f.text_field(:position, {:class => 'form-control'}) %>
+    <%= f.select(:position, 1..@subject_count, {:class => 'form-control'}) %>
   </div>
 </div>
 
@@ -16,5 +18,12 @@
   <%= f.label(:visible, :class => 'col-sm-3 control-label')  %>
   <div class="col-sm-6">
     <%= f.check_box(:visible) %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label(:created_at, :class => 'col-sm-3 control-label')  %>
+  <div class="col-sm-6">
+    <%= f.datetime_select(:created_at, :order => [:day, :month, :year]) %>
   </div>
 </div>
