--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -21,6 +21,7 @@
       <td class="center"><%= status_tag(subject.visible) %></td>
       <td class="center"><%= subject.pages.size %></td>
       <td>
+        <%= link_to("Pages", {:controller => 'pages', :subject_id => subject.id}, :class => 'btn btn-warning btn-sm') %>
         <%= link_to("Show", {:action => 'show', :id => subject.id}, :class => 'btn btn-info btn-sm') %>
         <%= link_to("Edit", {:action => 'edit', :id => subject.id}, :class => 'btn btn-default btn-sm') %>
         <%= link_to("Delete", {:action => 'delete', :id => subject.id}, :class => 'btn btn-danger btn-sm') %>
