--- a/app/views/access/login.html.erb
+++ b/app/views/access/login.html.erb
@@ -13,15 +13,15 @@
       <%= error_messages_for(@subject) %>
 
       <div class="form-group">
-        <%= label_tag(:username, nil, class: 'col-sm-3 control-label')  %>
-        <div class="col-sm-6">
+        <%= label_tag(:username, nil, class: 'col-xs-3 col-sm-3 control-label')  %>
+        <div class="col-xs-9 col-sm-6 col-md-6 col-lg-6">
           <%= text_field_tag(:username, nil, :class => 'form-control') %>
         </div>
       </div>
 
       <div class="form-group">
-        <%= label_tag(:password, nil, class: 'col-sm-3 control-label')  %>
-        <div class="col-sm-6">
+        <%= label_tag(:password, nil, class: 'col-xs-3 col-sm-3 control-label')  %>
+        <div class="col-xs-9 col-sm-6 col-md-6 col-lg-6">
           <%= password_field_tag(:password, nil, :class => 'form-control') %>
         </div>
       </div>
