--- a/app/views/partials/_submit_button.html.erb
+++ b/app/views/partials/_submit_button.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-12 col-sm-offset-3">
+  <div class="col-xs-6 col-sm-12 col-sm-offset-3 col-xs-offset-3">
     <div class="btn-toolbar">
       <%= submit_tag("Submit", {:class => 'btn btn-primary'}) %>
     </div>
