--- a/app/views/access/login.html.erb
+++ b/app/views/access/login.html.erb
@@ -15,14 +15,14 @@
       <div class="form-group">
         <%= label_tag(:username, nil, class: 'col-xs-3 col-sm-3 control-label')  %>
         <div class="col-xs-9 col-sm-6 col-md-6 col-lg-6">
-          <%= text_field_tag(:username, nil, :class => 'form-control') %>
+          <%= text_field_tag(:username, nil, class: 'form-control') %>
         </div>
       </div>
 
       <div class="form-group">
         <%= label_tag(:password, nil, class: 'col-xs-3 col-sm-3 control-label')  %>
         <div class="col-xs-9 col-sm-6 col-md-6 col-lg-6">
-          <%= password_field_tag(:password, nil, :class => 'form-control') %>
+          <%= password_field_tag(:password, nil, class: 'form-control') %>
         </div>
       </div>
 
