--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -2,3 +2,35 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+#comments {
+  background: #fff;
+  margin-bottom: 2em;
+  overflow: hidden;
+  padding: 20px 20px;
+  /*width: 760px;*/
+  width: 100%;
+
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+}
+
+#comments label {
+  display: block;
+}
+
+#comments label:after {
+  content:" *";
+}
+
+#comments ol li:nth-child(2n+1) {
+  background-color: #F5F4EF;
+}
+
+.page-title {
+  color: darkblue;
+}
+
+.nav-menu {
+  margin-bottom: 10px;
+}
