--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -20,21 +20,21 @@
         </button>
         <a class="navbar-brand" href="/">Home</a>
       </div>
-
-      <%= render(:partial => "partials/navbar")  %>
-
     </div>
   </div>
 
   <div class="container">
     <hr>
-
-    <div class="navigation">
-
-    </div>
-
     <div class="row">
-      <%= yield %>
+      <div class="col-lg-12">
+        <div class="col-lg-4">
+          <%= render(:partial => 'partials/navigation', :locals => {:subjects => @subjects}) %>
+        </div>
+
+        <div class="col-lg-8">
+          <%= yield %>
+        </div>
+      </div>
     </div>
 
     <div class="clear"></div>
